<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NurApiAndroidTest</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="write">Write</string>
    <string name="settings">Settings</string>
    <string name="region">Region</string>
    <string name="link_frequency">Link frequency</string>
    <string name="rx_decoding">RX-decoding</string>
    <string name="tx_level">TX-level</string>
    <string name="tx_modulation">TX-modulation</string>
    <string name="q">Q</string>
    <string name="rounds">Rounds</string>
    <string name="session">Session</string>
    <string name="target">Target</string>

    <string-array name="link_frequency_spinner_array">
        <item>160 kHz</item>
        <item>256 kHz</item>
        <item>360 kHz</item>
    </string-array>
    <string-array name="rx_decoding_spinner_array">
        <item>FM-0</item>
        <item>Miller-2</item>
        <item>Miller-4</item>
        <item>Miller-8</item>
    </string-array>
    <string-array name="tx_level_spinner_array">
        <item>500 mW</item>
        <item>398 mW</item>
        <item>316 mW</item>
        <item>251 mW</item>
        <item>200 mW</item>
        <item>158 mW</item>
        <item>126 mW</item>
        <item>100 mW</item>
        <item>79 mW</item>
        <item>63 mW</item>
        <item>50 mW</item>
        <item>40 mW</item>
        <item>32 mW</item>
        <item>25 mW</item>
        <item>20 mW</item>
        <item>16 mW</item>
        <item>13 mW</item>
        <item>10 mW</item>
        <item>8 mW</item>
    </string-array>
    <string-array name="tx_modulation_spinner_array">
        <item>ASK</item>
        <item>PR-ASK</item>
    </string-array>
    <string-array name="q_spinner_array">
        <item>AUTO</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="rounds_spinner_array">
        <item>AUTO</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="session_spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="target_spinner_array">
        <item>A</item>
        <item>B</item>
        <item>Dual Target</item>
    </string-array>
    <string-array name="regions_array">
        <item>Europe</item>
        <item>North-America</item>
        <item>People\'s Republic of China (UB)</item>
        <item>Malaysia</item>
        <item>Brazil</item>
        <item>Australia</item>
        <item>New Zealand</item>
        <item>Japan 250mW LBT</item>
        <item>Japan 500mW DRM</item>
        <item>Korea LBT</item>
        <item>India</item>
        <item>Russia</item>
        <item>Vietnam</item>
        <item>Singapore</item>
        <item>Thailand</item>
        <item>Philippines</item>
    </string-array>

    <string name="connection_status">Connection status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="model">Model</string>
    <string name="serial">Serial</string>
    <string name="firmware">Firmware</string>
    <string name="dash">-</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
	<string name="target_epc">Target EPC</string>
	<string name="new_epc">New EPC</string>
	<string name="cancel">Cancel</string>
	<string name="refresh">Refresh</string>
	
	<string name="epc">EPC</string>
	<string name="rssi">RSSI</string>
	<string name="timestamp">Timestamp</string>
	<string name="frequency">Frequency</string>
	<string name="found">Found</string>
	<string name="found_percent">Found %</string>
	<string name="zero">0</string>
	<string name="tps">t/s</string>
</resources>