<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tag_toast_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/epc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/epc"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/epc_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/rssi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rssi"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/rssi_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/timestamp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/timestamp_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/frequency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/frequency_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/found_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/found_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black" />
      
    <TextView
        android:id="@+id/found_percent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_percent"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/found_percent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black" />

</LinearLayout>